[project]
name = "nasa-mcp"
version = "0.1.0"
description = "Model Context Protocol server exposing NASA's open APIs as agent tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx>=0.28.1", "mcp[cli]>=1.27.1", "pydantic>=2.13.4"]

[project.scripts]
nasa-mcp = "nasa_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
