[project]
name = "nasa-mcp"
version = "0.1.0"
description = "Model Context Protocol server exposing NASA's open APIs as agent tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
nasa-mcp = "nasa_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "nasa_mcp/features",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "live: hits real NASA APIs (skipped by default; run with `pytest -m live`)",
]
addopts = "-m 'not live'"